Fix: Youtube video is not visible properrly on header

--- a/sass/site/media/_galleries.scss
+++ b/sass/site/media/_galleries.scss
@@ -1,30 +1,30 @@
-
-
 /* Astra Respnosive oEmbed Video container */
 
 .ast-oembed-container {
     position: relative;
-    padding-top: 56.25%;
+    padding-top: 5%;
+    /* 16:9 aspect ratio */
     height: 0;
-    overflow: hidden;
     max-width: 100%;
-    height: auto;
-
-    iframe, object, embed{ 
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
+    overflow: hidden;
 }
 
-body .ast-oembed-container {
-    *{ 
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
+.ast-oembed-container iframe,
+.ast-oembed-container object,
+.ast-oembed-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+/* Reset styles for iframe, object, and embed elements */
+.ast-oembed-container iframe,
+.ast-oembed-container object,
+.ast-oembed-container embed,
+body .ast-oembed-container * {
+    position: static;
+    width: auto;
+    height: auto;
 }
